# try-rust-demo

./: README.md
02-concurrency/: Cargo.toml
02-concurrency/.history/: Cargo_20250314211421.toml
02-concurrency/.history/examples/: ametrics_20250316224715.rs  ametrics_20250316224722.rs  ametrics_20250316224732.rs  ametrics_20250316224825.rs  ametrics_20250316224924.rs  ametrics_20250316225948.rs  ametrics_20250316230016.rs  ametrics_20250316230234.rs  dredis_20250317173953.rs  dredis_20250317174010.rs  dredis_20250317174109.rs  dredis_20250317174125.rs  dredis_20250317174156.rs  dredis_20250317174202.rs  dredis_20250317174208.rs  dredis_20250317174331.rs  dredis_20250317174404.rs  dredis_20250317174421.rs  dredis_20250317174429.rs  dredis_20250317174512.rs  dredis_20250317174547.rs  dredis_20250317174656.rs  dredis_20250317174746.rs  dredis_20250317174805.rs  dredis_20250317174843.rs  dredis_20250317175241.rs  dredis_20250317175300.rs  dredis_20250317175320.rs  dredis_20250317175437.rs  dredis_20250317175447.rs  dredis_20250317175518.rs  dredis_20250317175554.rs  dredis_20250317175633.rs  dredis_20250317175649.rs  dredis_20250317175741.rs  dredis_20250317175749.rs  dredis_20250317175825.rs  dredis_20250317175843.rs  matrix_20250311215400.rs  (+69 more)
02-concurrency/examples/: dredis.rs
02-concurrency/src/: matrix.rs
04-ecosystem/: Cargo.toml  test.rest
04-ecosystem/.history/: CHANGELOG_20250328232105.md  Cargo_20250328232040.toml  Cargo_20250328233404.toml  Cargo_20250328233418.toml
04-ecosystem/examples/: axum_tracing.rs  builder.rs  enum.rs  err.rs  more.rs
(+1466 files in other folders)
