[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[dev-dependencies]

axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
derive_builder = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
